[package]
name = "craig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros","rt-multi-thread"] }
serenity = "0.12.2"
ollama-rs = "0.2.0"
lazy_static = "1"
